[package]
name = "EasyDist"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "EasyDist"
path = "src/lib.rs"

[[example]]
name = "ping"
path = "example/ping.rs"

[[example]]
name = "pong"
path = "example/pong.rs"

[dependencies]
aes = "0.8.4"
atoi = "2.0.0"
byteorder = "1.5.0"
bytes = "1.6.0"
ctr = "0.9.2"
dashmap = "6.0.1"
env_logger = "0.11.3"
hmac = "0.12.1"
log = "0.4.21"
memmap2 = "0.9.4"
rand = "0.8.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = { version = "0.10.8", features = ["oid"] }
simplelog = "0.12.2"
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7.11", features = ["codec"]}
tracing = "0.1.40"
rustix = { version = "0", features = [ "fs" ]}
crc32c = "0.6.8"
async-trait = "0.1.81"
rsa = { version = "0.9.6", features = ["serde"] }
num-bigint = "0.4.6"
openssl = "0.10.66"
fs4 = "0.9.1"
crossbeam-channel = "0.5.13"
